-
Bug
-
Resolution: Fixed
-
P2: Important
-
5.2.0 Beta1
-
None
QLocale::countryToString() returns the English name for a given country. But the string (defined in country_name_list in qtbase/src/corelib/tools/qlocale_data_p.h) is not a normal English name that can be used directly in a user interface, since normal formatting (specifically spaces) is lost.
For instance the list gives "AntiguaAndBarbuda" instead of "Antigua And Barbuda", "CentralAfricanRepublic" instead of "Central African Republic", etc.
This bug is related to QTBUG-1587. That bug requests that the name be returned appropriately for the language of the Locale, rather than an English name. Here I'm noting that not even an English name is in fact returned.